# rust_java_lib_host_example

./: .gitignore  Cargo.toml  README.md  build.grade  build.rs  settings.gradle
lib/: build.gradle
lib/src/main/java/my/java/lib/: NativeUtils.java
lib/src/test/java/my/java/lib/: LibraryTest.java
src/: java_glue.rs  lib.rs
