[package]
name = "my_java_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "my_java_lib"

[dependencies]
log = "^0.4.6"

[build-dependencies]
flapigen = "0.6.0-pre7"
bindgen = { version = "0.69", default-features = false }
